<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyVoice</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_questioner">QuestionerActivity</string>
    <string name="question_hint">Enter your question here</string>
    <string name="btn_options">Options</string>
    <string name="opta">OptionA</string>
    <string name="optb">OptionB</string>
    <string name="optc">OptionC</string>
    <string name="optd">OptionD</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="questioner_f_h">Questioner History Page</string>
    <string name="questioner_f_c">Questioner Current Page</string>
    <string name="response_f_h">Response History Page</string>
    <string name="response_f_c">Response Current Page</string>
    <string name="feeds">Feeds Page</string>
    <string name="support">Support Page</string>
    <string name="title_activity_response">ResponseActivity</string>
    <string name="response">Response</string>
    <string name="questionnew">new</string>
    <string name="votes">100/150 responded</string>
    <string name="nq">New Question</string>
    <string name="que">Question</string>
    <string name="options">Options</string>
    <string name="a">A.</string>
    <string name="b">B.</string>
    <string name="c">C.</string>
    <string name="d">D.</string>

</resources>
