<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fafafa"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.stoapps.myvoice.QuestionerActivity" >
    
    <TextView 
        android:id="@+id/txtQuestionerQ"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="18sp"
        android:text="@string/que"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_margin="10dp"
        />

    <com.stoapps.clearedittext.MyEditText 
        android:id="@+id/edtQuestion"
        android:layout_height="80dp"
        android:layout_width="match_parent"
        android:drawableRight="@drawable/clear_image_button"
        android:hint="@string/question_hint"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/txtQuestionerQ"
        android:background="@drawable/round_edit_text"
        android:textSize="18sp"
        android:layout_margin="10dp"
        />
    
    <TextView 
        android:id="@+id/txtOptss"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="18sp"
        android:text="@string/options"
        android:layout_alignParentLeft="true"
        android:layout_margin="10dp"
        android:layout_below="@id/edtQuestion"
        />
    
    <ImageView 
        android:id="@+id/imgAddOptions"
        android:layout_height="20dp"
        android:layout_width="20dp"
        android:contentDescription="@string/hello_world"
        android:src="@drawable/plus"
        android:layout_below="@id/edtQuestion"
        android:layout_toRightOf="@id/txtOptss"
        android:layout_marginRight="10dp"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/round_button"
        android:visibility="invisible"
        />
    
    <TextView 
        android:id="@+id/txtOptChA"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/imgAddOptions"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/a"
        android:textSize="14sp"
        android:layout_alignParentLeft="true"
        android:visibility="invisible"
        />
    
    <com.stoapps.clearedittext.MyEditText 
            android:id="@+id/edtOptioA"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:drawableRight="@drawable/clear_image_button"
            android:background="@drawable/round_edit_text"
            android:hint="@string/opta"
            android:layout_margin="10dp"
            android:visibility="invisible"
            android:layout_below="@id/imgAddOptions"
            android:layout_toRightOf="@id/txtOptChA"
            />
    
    <TextView 
        android:id="@+id/txtOptChB"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/edtOptioA"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/b"
        android:textSize="14sp"
        android:layout_alignParentLeft="true"
        android:visibility="invisible"
        />
    
    <com.stoapps.clearedittext.MyEditText 
            android:id="@+id/edtOptioB"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:drawableRight="@drawable/clear_image_button"
            android:background="@drawable/round_edit_text"
            android:hint="@string/optb"
            android:layout_margin="10dp"
            android:visibility="invisible"
            android:layout_below="@id/edtOptioA"
            android:layout_toRightOf="@id/txtOptChB"
            />
    
    <TextView 
        android:id="@+id/txtOptChC"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/edtOptioB"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/c"
        android:textSize="14sp"
        android:layout_alignParentLeft="true"
        android:visibility="invisible"
        />
    
    <com.stoapps.clearedittext.MyEditText 
            android:id="@+id/edtOptioC"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:drawableRight="@drawable/clear_image_button"
            android:background="@drawable/round_edit_text"
            android:hint="@string/optc"
            android:layout_margin="10dp"
            android:visibility="invisible"
            android:layout_below="@id/edtOptioB"
            android:layout_toRightOf="@id/txtOptChC"
            />
    
    <TextView 
        android:id="@+id/txtOptChD"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/edtOptioC"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/d"
        android:textSize="14sp"
        android:layout_alignParentLeft="true"
        android:visibility="invisible"
        />
    
       <com.stoapps.clearedittext.MyEditText 
            android:id="@+id/edtOptioD"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:drawableRight="@drawable/clear_image_button"
            android:background="@drawable/round_edit_text"
            android:hint="@string/optd"
            android:layout_margin="10dp"
            android:visibility="invisible"
            android:layout_below="@id/edtOptioC"
            android:layout_toRightOf="@id/txtOptChD"
            /> 
    
    <ImageView 
        android:id="@+id/btnCancel"
        android:layout_height="30dp"
        android:layout_width="30dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp"
        android:text="@string/cancel"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:src="@drawable/delete_sign"
        android:contentDescription="@string/save"
        android:background="@drawable/round_button"
        android:visibility="invisible"
        />
    
    <ImageView 
        android:id="@+id/btnSave"
        android:layout_height="30dp"
        android:layout_width="30dp"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:contentDescription="@string/cancel"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:background="@drawable/round_button"
        android:layout_toLeftOf="@id/btnCancel"
        android:src="@drawable/checkmark"
        android:visibility="invisible"
        />
    
     <Button
        android:id="@+id/btnResponse"
        android:layout_height="40dp"
        android:layout_width="150dp"
        android:layout_below="@id/btnSave"
        android:text="@string/response"
        android:layout_margin="10dp"
        android:contentDescription="@string/response"
        android:visibility="invisible"
        /> 

</RelativeLayout>
